# Taskminal

./: .gitignore  LICENSE.md  README.md  db.txt  pyproject.toml  pytest.ini  setup.py  taskminal.py
taskminal/: main.py  report.py  taskminal.py
taskminal/tests/: test_database.py
tests/: test_database.py
