[tool.poetry]
name = "taskminal"
version = "0.5"
description = "A CLI task list / time tracker powered by SQLite"
authors = ["JustADataConstruct"]
license = "MIT"
classifiers = ['Development Status :: 4 - Beta',
               'Environment :: Console',
               'Intended Audience :: End Users/Desktop',
               'License :: OSI Approved :: MIT License',
               'Programming Language :: Python :: 3.9',
               'Topic :: Utilities']
readme="README.md"
keywords= ['sqlite','time tracker','to-do','list']
repository = 'https://github.com/JustADataConstruct/Taskminal'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
vermin = "^1.3.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]
taskminal='taskminal.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
